# local-ai-manager

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CROSS_PLATFORM_SUMMARY.md  DEVELOPMENT_LOG.md  Dockerfile  Install-LocalAI-Manager.ps1  README.md  Setup-Path.ps1  config.example.json  docker-compose.yml  install.sh  migrate.py  pyproject.toml
.github/workflows/: release.yml
packaging/homebrew/: local-ai-manager.rb
skills/: skills.json
src/local_ai_manager/: __init__.py  __main__.py  autostart.py  cli.py  config.py  defaults.py  models.py  registry.py  server.py  steam_watcher.py  system_platform.py
src/local_ai_manager/textgrad/: __init__.py  diff_editor.py  function.py  optimizer.py  persistence.py  variable.py  workflow.py
